# hass-chameleon

./: -  .pre-commit-config.yaml  CLAUDE.md  README.md  hacs.json  pyproject.toml
custom_components/chameleon_ultra/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device.py  entity.py  event.py  manifest.json  pairing.py  protocol.py  select.py  sensor.py  services.yaml  switch.py
custom_components/chameleon_ultra/translations/: en.json
scripts/: reset_ble.sh  test_ble_connect.py  test_ble_signal.py  test_bluetoothctl_pair.exp  test_pair_dbus_only.py
tests/: conftest.py  test_device.py  test_integration.py  test_protocol.py
